--- a/pom.xml
+++ b/pom.xml
@@ -6,8 +6,12 @@
 
     <groupId>com.project</groupId>
     <artifactId>SpringCloud</artifactId>
+    <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
-
+    <modules>
+        <module>ConfigServer</module>
+        <module>RegisterServer</module>
+    </modules>
 
 
     <!-- 指定maven仓库 -->
