--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,14 @@
     <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
     <modules>
+        <module>Queue</module>
+        <module>Client1</module>
+        <module>Client1s</module>
+        <module>Client2_Feign</module>
+        <module>RegisterServer</module>
+        <module>ConfigServer</module>
+        <module>ConfigClient1</module>
+        <module>ConfigClient2</module>
 
     </modules>
 
@@ -61,7 +69,7 @@
 
     <dependencies>
 
-
+        <!--spring-boot的相关jar包-->
 
         <!--spring-boot的web启动的jar包-->
         <dependency>
@@ -80,7 +88,7 @@
             <artifactId>spring-boot-devtools</artifactId>
             <optional>true</optional>
         </dependency>
-        <!--测试-->
+        <!--springboot的测试，包含了Junit、spring-test、boot-test-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
@@ -99,20 +107,27 @@
 
 
 
-        <!--spring-cloud的相关jar包-->
+        <!--spring-cloud相关jar包-->
+
         <!--服务治理-->
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-netflix-eureka-server</artifactId>
             <version>2.1.4.RELEASE</version>
         </dependency>
-
-        <!--配置-客户端-->
+        <!--配置客户端-->
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-config</artifactId>
             <version>2.1.4.RELEASE</version>
         </dependency>
+
+        <!--配置服务器（注意！这个坐标只能放在配置服务器里！否则不生效！）-->
+       <!-- <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-config-server</artifactId>
+            <version>2.1.4.RELEASE</version>
+        </dependency>-->
 
         <!--熔断-->
         <dependency>
@@ -120,7 +135,7 @@
             <artifactId>spring-cloud-starter-netflix-hystrix</artifactId>
             <version>2.1.4.RELEASE</version>
         </dependency>
-        <!--数据调用-->
+        <!--cloud的fegin数据远程调用（RPC）-->
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-openfeign</artifactId>
@@ -129,11 +144,24 @@
 
 
 
+
+
         <!--servlet3.1.0版本，有需要的东西-->
         <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>javax.servlet-api</artifactId>
             <version>3.1.0</version>
+            <scope>provided</scope>
+        </dependency>
+
+
+
+
+        <!--实体类加上注解@Data就不用写get/set方法了-->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.12</version>
             <scope>provided</scope>
         </dependency>
 
