--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,8 @@
         <module>ConfigServer</module>
         <module>ConfigClient1</module>
         <module>ConfigClient2</module>
+        <module>Excel_Poi</module>
+        <module>Shiro</module>
 
     </modules>
 
@@ -145,7 +147,6 @@
 
 
 
-
         <!--servlet3.1.0版本，有需要的东西-->
         <dependency>
             <groupId>javax.servlet</groupId>
@@ -156,8 +157,21 @@
 
 
 
+        <!--poi用于查询excel表中的数据-->
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi</artifactId>
+            <version>4.1.2</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi-ooxml</artifactId>
+            <version>4.1.2</version>
+        </dependency>
 
-        <!--实体类加上注解@Data就不用写get/set方法了-->
+
+
+        <!--实体类加上注解@Data就不用写get/set方法了————但必须要安装lombok插件-->
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
