--- a/Excel_Poi/pom.xml
+++ b/Excel_Poi/pom.xml
@@ -11,5 +11,23 @@
 
     <artifactId>Excel_Poi</artifactId>
 
+    <dependencies>
+
+
+        <!--poi用于查询excel表中的数据-->
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi</artifactId>
+            <version>4.1.2</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi-ooxml</artifactId>
+            <version>4.1.2</version>
+        </dependency>
+
+
+
+    </dependencies>
 
 </project>
