--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
         <module>ConfigClient2</module>
         <module>Excel_Poi</module>
         <module>Shiro</module>
+        <module>RabbitMQ</module>
 
     </modules>
 
