--- a/WebSocket_RabbitMQ/pom.xml
+++ b/WebSocket_RabbitMQ/pom.xml
@@ -59,8 +59,18 @@
             <artifactId>spring-boot-starter-websocket</artifactId>
         </dependency>
 
+        <!--lombok-->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
 
-
+        <!--httpclient（前后端分离，获得http客户端，对于浏览器是后端，对于后端服务器属于客户端）-->
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>4.5.10</version>
+        </dependency>
 
 
     </dependencies>
