--- a/Jdk1.8/pom.xml
+++ b/Jdk1.8/pom.xml
@@ -5,7 +5,8 @@
 
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>Shiro</artifactId>
+    <artifactId>Jdk1.8</artifactId>
+
 
     <!-- 继承父包，所有spring-boot下的框架都会使用这个版本 -->
     <parent>
@@ -14,6 +15,9 @@
         <version>2.1.4.RELEASE</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
+
+
+
 
     <dependencies>
 
@@ -45,19 +49,7 @@
         </dependency>
 
 
-
-
-        <!--shiro-->
-        <dependency>
-            <groupId>org.apache.shiro</groupId>
-            <artifactId>shiro-spring</artifactId>
-            <version>1.4.0</version>
-        </dependency>
-        <dependency>
-            <groupId>com.github.theborakompanioni</groupId>
-            <artifactId>thymeleaf-extras-shiro</artifactId>
-            <version>2.0.0</version>
-        </dependency>
+        
 
 
     </dependencies>
