--- a/MyBatis_Plus/pom.xml
+++ b/MyBatis_Plus/pom.xml
@@ -5,7 +5,8 @@
 
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>Shiro</artifactId>
+    <artifactId>MyBatis_Plus</artifactId>
+
 
     <!-- 继承父包，所有spring-boot下的框架都会使用这个版本 -->
     <parent>
@@ -46,20 +47,44 @@
 
 
 
-
-        <!--shiro-->
+        <!--mybatis_plus-->
         <dependency>
-            <groupId>org.apache.shiro</groupId>
-            <artifactId>shiro-spring</artifactId>
-            <version>1.4.0</version>
+            <groupId>com.baomidou</groupId>
+            <artifactId>mybatis-plus-boot-starter</artifactId>
+            <version>3.2.0</version>
         </dependency>
         <dependency>
-            <groupId>com.github.theborakompanioni</groupId>
-            <artifactId>thymeleaf-extras-shiro</artifactId>
-            <version>2.0.0</version>
+            <groupId>com.baomidou</groupId>
+            <artifactId>mybatis-plus-generator</artifactId>
+            <version>3.2.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.baomidou</groupId>
+            <artifactId>mybatis-plus-core</artifactId>
+            <version>3.2.0</version>
+        </dependency>
+
+
+        <!-- mysql数据库驱动-->
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>5.1.48</version>
+        </dependency>
+
+
+        <!--实体类加上注解@Data就不用写get/set方法了,但是：
+         （1）安装lombok插件才会有get/set方法，建议手写
+         （2）使用log.info()可在控制台打出想要的消息-->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.6</version>
+            <scope>provided</scope>
         </dependency>
 
 
     </dependencies>
+
 
 </project>
