--- a/Redis/pom.xml
+++ b/Redis/pom.xml
@@ -5,7 +5,10 @@
 
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>Shiro</artifactId>
+    <artifactId>Redis</artifactId>
+
+
+
 
     <!-- 继承父包，所有spring-boot下的框架都会使用这个版本 -->
     <parent>
@@ -14,6 +17,9 @@
         <version>2.1.4.RELEASE</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
+
+
+
 
     <dependencies>
 
@@ -45,23 +51,53 @@
         </dependency>
 
 
-
-        <!--thymeleaf模板，是很不错的html数据传递取值，类似jsp的jstl
-           （1）这个模板好处在于，Controller返回页面时，直接写login（不用写login.html）
-           （2）与static不同，static是静态资源，直接加.html就可访问，templates是动态资源，必须通过controller访问
-           （3）这个坐标一旦引入，所有controller动态访问都是访问templates下的页面，不导入就是访问static下的页面
-           （3）templates文件夹中的动态页面需要引入thymeleaf组件之后经过控制器返回才能访问到
-           -->
-      <!--  <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-thymeleaf</artifactId>
-        </dependency>
--->
-        <!--shiro-->
+        <!--SpringBoot的mybatis-->
         <dependency>
-            <groupId>org.apache.shiro</groupId>
-            <artifactId>shiro-spring</artifactId>
-            <version>1.4.0</version>
+            <groupId>org.mybatis.spring.boot</groupId>
+            <artifactId>mybatis-spring-boot-starter</artifactId>
+            <version>2.0.1</version>
+        </dependency>
+        <!-- mysql数据库驱动-->
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>5.1.48</version>
+        </dependency>
+
+
+
+
+
+        <!--redis-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+            <!-- 排除lettuce包，使用jedis代替-->
+            <exclusions>
+                <exclusion>
+                    <groupId>io.lettuce</groupId>
+                    <artifactId>lettuce-core</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+
+
+        <!--jedis-->
+        <dependency>
+            <groupId>redis.clients</groupId>
+            <artifactId>jedis</artifactId>
+            <version>2.9.0</version>
+        </dependency>
+
+
+        <!--实体类加上注解@Data就不用写get/set方法了,但是：
+          （1）安装lombok插件才会有get/set方法，建议手写
+          （2）使用log.info()可在控制台打出想要的消息-->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.6</version>
+            <scope>provided</scope>
         </dependency>
 
 
